# wiktionary-ja

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/wikitext/: template.py
src/wiktionary_ja/: __init__.py
wikitext/src/wikitext/: __init__.py  heading.py
wikitext/tests/wikitext/: test_link.py  test_list.py  test_richtext.py
wiktionary/: pyproject.toml
wiktionary/src/wiktionary/: __init__.py  document.py
