[project]
name = "wiktionary-ja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "mkpoli", email = "git@mkpo.li" }]
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["wikitext", "wiktionary"]

[dependency-groups]
dev = [
    "docstr-coverage>=2.3.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
