[project]
name = "wiktionary-ja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "mkpoli", email = "git@mkpo.li" }]
requires-python = ">=3.12"
dependencies = ["jawikt", "wikitext", "wiktionary"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
wikitext = { workspace = true }
wiktionary = { workspace = true }
jawikt = { workspace = true }

[dependency-groups]
dev = [
    "docstr-coverage>=2.3.2",
    "janome>=0.5.0",
    "mecab-python3>=1.0.10",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "vibrato>=0.2.0",
]
