[project]
name = "wiktionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mkpoli", email = "git@mkpo.li" }
]
requires-python = ">=3.13"
dependencies = [
    "wikitext",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
wikitext = { workspace = true }
